[package]
name = "EdgeRoyale-calculator"
version = "1.3.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opener = "0.8.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.tiny]
inherits = "release" # Use release settings as a base
opt-level = "z"
